--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, shrink-to-fit=no" />
     <title>Brafé 3</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
+
   <body>
-    <header>
-      <a href="#"><img src="img/brafe.png" alt="Brafé" /></a>
-      <nav>
+    <header class="header">
+      <a class="header-logo" href="#">
+        <img src="img/brafe.png" alt="Brafé" />
+      </a>
+      <nav class="header-menu">
         <ul>
           <li><a href="#">Sobre</a></li>
           <li><a href="#">Produtos</a></li>
@@ -19,55 +25,78 @@
       </nav>
     </header>
 
-    <main>
-      <nav>
+    <main class="main-container">
+      <nav class="side-nav">
         <ul>
-          <li><a href="#">Contabilidade</a></li>
-          <li><a href="#">Produtos</a></li>
-          <li><a href="#">Páginas</a></li>
-          <li><a href="#">Plugins</a></li>
-          <li><a href="#">Formulários</a></li>
-          <li><a href="#">Hospedagem</a></li>
+          <li><a class="nav-contabilidade" href="#">Contabilidade</a></li>
+          <li><a class="nav-produtos" href="#">Produtos</a></li>
+          <li><a class="nav-paginas" href="#">Páginas</a></li>
+          <li><a class="nav-plugins" href="#">Plugins</a></li>
+          <li><a class="nav-formularios" href="#">Formulários</a></li>
+          <li><a class="nav-hospedagens" href="#">Hospedagens</a></li>
         </ul>
       </nav>
 
-      <section>
+      <section class="produtos">
         <header>
           <h1>Produtos</h1>
-          <a href="#">Adicionar produtos</a>
+          <a class="adicionar-produtos" href="#">Adicionar Produtos</a>
         </header>
         <ul>
-          <li>
+          <li class="produtos-item">
             <img src="img/cafe-1.jpg" alt="Café 1" />
             <ul>
-              <li><span>Nome</span> Cappuccino</li>
+              <li><span>Nome</span> Capuccino</li>
               <li><span>Preço</span> R$ 2,45</li>
               <li><span>Dados</span> Café novo no estilo Cappuccino</li>
             </ul>
             <a href="#">Editar</a>
           </li>
-          <li>
+
+          <li class="produtos-item">
             <img src="img/cafe-2.jpg" alt="Café 2" />
             <ul>
-              <li><span>Nome</span> Cappuccino</li>
+              <li><span>Nome</span> Capuccino</li>
               <li><span>Preço</span> R$ 2,45</li>
               <li><span>Dados</span> Café novo no estilo Cappuccino</li>
             </ul>
             <a href="#">Editar</a>
           </li>
-          <li>
+
+          <li class="produtos-item">
             <img src="img/cafe-3.jpg" alt="Café 3" />
             <ul>
-              <li><span>Nome</span> Cappuccino</li>
+              <li><span>Nome</span> Capuccino</li>
               <li><span>Preço</span> R$ 2,45</li>
               <li><span>Dados</span> Café novo no estilo Cappuccino</li>
             </ul>
             <a href="#">Editar</a>
           </li>
-          <li>
+
+          <li class="produtos-item">
             <img src="img/cafe-4.jpg" alt="Café 4" />
             <ul>
-              <li><span>Nome</span> Cappuccino</li>
+              <li><span>Nome</span> Capuccino</li>
+              <li><span>Preço</span> R$ 2,45</li>
+              <li><span>Dados</span> Café novo no estilo Cappuccino</li>
+            </ul>
+            <a href="#">Editar</a>
+          </li>
+
+          <li class="produtos-item">
+            <img src="img/cafe-1.jpg" alt="Café 1" />
+            <ul>
+              <li><span>Nome</span> Capuccino</li>
+              <li><span>Preço</span> R$ 2,45</li>
+              <li><span>Dados</span> Café novo no estilo Cappuccino</li>
+            </ul>
+            <a href="#">Editar</a>
+          </li>
+
+          <li class="produtos-item">
+            <img src="img/cafe-3.jpg" alt="Café 3" />
+            <ul>
+              <li><span>Nome</span> Capuccino</li>
               <li><span>Preço</span> R$ 2,45</li>
               <li><span>Dados</span> Café novo no estilo Cappuccino</li>
             </ul>
